--- a/pom.xml
+++ b/pom.xml
@@ -47,13 +47,18 @@
 			<!-- <version>42.2.18</version> -->
 			<!-- <scope>runtime</scope> -->
 		</dependency>
-
+		
 		<dependency>
-			<groupId>com.google.code.gson</groupId>
-			<artifactId>gson</artifactId>
-			<!-- <version>2.8.6</version> -->
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-web</artifactId>
+			<!-- <version>2.13.3</version> -->
 		</dependency>
 
+<!-- 		<dependency> -->
+<!-- 			<groupId>com.google.code.gson</groupId> -->
+<!-- 			<artifactId>gson</artifactId> -->
+			<!-- <version>2.8.6</version> -->
+<!-- 		</dependency> -->
 
 		<!-- 如果前端網頁要用 jsp 就必須有此 dependency 否則會直接將該檔案下載下來 -->
 		<dependency>
@@ -61,10 +66,9 @@
 			<artifactId>tomcat-embed-jasper</artifactId>
 		</dependency>
 		<!-- <dependency> -->
-		<!-- <groupId>javax.servlet</groupId> -->
-		<!-- <artifactId>jstl</artifactId> -->
+			<!-- <groupId>javax.servlet</groupId> -->
+			<!-- <artifactId>jstl</artifactId> -->
 		<!-- </dependency> -->
-
 	</dependencies>
 
 	<build>
