--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,12 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=pu
 spring.datasource.username=postgres
 spring.datasource.password=99988776
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
+# validate \u52a0\u8f09 Hibernate \u6642\uff0c\u9a57\u8b49\u5275\u5efa\u6578\u64da\u5eab\u8868\u7d50\u69cb
+# create \u6bcf\u6b21\u52a0\u8f09 Hibernate \uff0c\u91cd\u65b0\u5275\u5efa\u6578\u64da\u5eab\u8868\u7d50\u69cb\uff0c\u9019\u5c31\u662f\u5c0e\u81f4\u6578\u64da\u5eab\u8868\u6578\u64da\u4e1f\u5931\u7684\u539f\u56e0\u3002
+# create-drop \u52a0\u8f09 Hibernate \u6642\u5275\u5efa\uff0c\u9000\u51fa\u6642\u522a\u9664\u8868\u7d50\u69cb
+# update \u52a0\u8f09 Hibernate \u81ea\u52d5\u66f4\u65b0\u6578\u64da\u5eab\u7d50\u69cb
+# none \u8868\u793a\u7121\u6548\u679c
+# \u6240\u4ee5\uff0c\u5982\u679c\u4f60\u60f3\u4fdd\u7559\u8868\u7d50\u69cb\u7684\u6578\u64da\uff0c\u4f7f\u7528 update \u5373\u53ef\u3002
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
 
