practice @RequestMapping annotation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,8 +25,8 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
 # update \u52a0\u8f09 Hibernate \u81ea\u52d5\u66f4\u65b0\u6578\u64da\u5eab\u7d50\u69cb
 # none \u8868\u793a\u7121\u6548\u679c
 # \u6240\u4ee5\uff0c\u5982\u679c\u4f60\u60f3\u4fdd\u7559\u8868\u7d50\u69cb\u7684\u6578\u64da\uff0c\u4f7f\u7528 update \u5373\u53ef\u3002
-spring.jpa.hibernate.ddl-auto=create
-#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
 
 com.jj.name=J.J.Huang
