--- a/pom.xml
+++ b/pom.xml
@@ -47,18 +47,18 @@
 			<!-- <version>42.2.18</version> -->
 			<!-- <scope>runtime</scope> -->
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-web</artifactId>
 			<!-- <version>2.13.3</version> -->
 		</dependency>
 
-<!-- 		<dependency> -->
-<!-- 			<groupId>com.google.code.gson</groupId> -->
-<!-- 			<artifactId>gson</artifactId> -->
-			<!-- <version>2.8.6</version> -->
-<!-- 		</dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>com.google.code.gson</groupId> -->
+		<!-- <artifactId>gson</artifactId> -->
+		<!-- <version>2.8.6</version> -->
+		<!-- </dependency> -->
 
 		<!-- 如果前端網頁要用 jsp 就必須有此 dependency 否則會直接將該檔案下載下來 -->
 		<dependency>
@@ -66,9 +66,33 @@
 			<artifactId>tomcat-embed-jasper</artifactId>
 		</dependency>
 		<!-- <dependency> -->
-			<!-- <groupId>javax.servlet</groupId> -->
-			<!-- <artifactId>jstl</artifactId> -->
+		<!-- <groupId>javax.servlet</groupId> -->
+		<!-- <artifactId>jstl</artifactId> -->
 		<!-- </dependency> -->
+
+		<!-- Validation 相關，現在還沒有很懂 -->
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>2.0.1.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<!-- <version>6.0.13.Final</version> -->
+		</dependency>
+		<!-- <dependency> -->
+		<!-- <groupId>javax.el</groupId> -->
+		<!-- <artifactId>javax.el-api</artifactId> -->
+		<!-- <version>3.0.0</version> -->
+		<!-- </dependency> -->
+
+		<!-- <dependency> -->
+		<!-- <groupId>org.glassfish.web</groupId> -->
+		<!-- <artifactId>javax.el</artifactId> -->
+		<!-- <version>2.2.6</version> -->
+		<!-- </dependency> -->
+
 	</dependencies>
 
 	<build>
